[gd_scene load_steps=6 format=3 uid="uid://blaqvxeiueug6"]

[ext_resource type="Script" uid="uid://bnqnsjs3o8ma" path="res://scripts/grass.gd" id="1_cvbpf"]
[ext_resource type="Texture2D" uid="uid://civlcergoqgh5" path="res://assets/environment/forest grass patch 1.png" id="1_e1kak"]
[ext_resource type="Texture2D" uid="uid://dis57wlfc333d" path="res://assets/environment/forest grass patch 2.png" id="2_3kunl"]
[ext_resource type="Texture2D" uid="uid://be3k146wj888y" path="res://assets/environment/forest grass patch 3.png" id="3_u68v2"]
[ext_resource type="Texture2D" uid="uid://2nh3tyvwbku7" path="res://assets/items/item - mushroom.png" id="4_u68v2"]

[node name="Grass" type="Node3D"]
transform = Transform3D(0.43092197, 0, 0, 0, 0.28713444, 0, 0, 0, 1, 0.04580471, 0.07236941, 0)
script = ExtResource("1_cvbpf")

[node name="GrassSprite1" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.9999999, -0.11221394, 0.9194077, -0.0067261453)
texture = ExtResource("1_e1kak")

[node name="GrassSprite2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.9999998, -0.110733345, 0.46370125, -0.0005086175)
texture = ExtResource("2_3kunl")

[node name="GrassSprite3" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.9999999, -0.105314314, 0.64758277, -0.00108394)
texture_filter = 2
texture = ExtResource("3_u68v2")

[node name="GrassSprite4" type="Sprite3D" parent="."]
transform = Transform3D(0.5109446, 0, 0, 0, 0.5724951, 0, 0, 0, 0.99999976, -0.105314314, 0.3442793, -0.0010839398)
texture_filter = 2
texture = ExtResource("4_u68v2")
